fix spacing issues

--- a/Movie-app-design/resources/CSS/styles.css
+++ b/Movie-app-design/resources/CSS/styles.css
@@ -367,3 +367,32 @@ z-index: 10;
 
   
 }
+
+@media screen and (max-width:568px){
+  span:not(.h3){
+    font-size: 11px;
+    font-weight: 200;
+  }
+  .h3{
+    font-size: 13px;
+    font-weight: 600;
+  }
+
+  
+.continueWatching span:nth-child(2)::before{
+  display: none;
+}
+
+
+.continueWatching span:nth-child(2){
+  margin-left: auto;
+}
+
+.column-1 .play-txt{
+  display: none;
+  
+}
+.left-column{
+  padding-right: 0;
+}
+}
